# ai_chatbot

./: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ChatBubble.cpp  ChatBubble.h  ChatPDFExporter.cpp  ChatPDFExporter.h  ChatWindow.cpp  ChatWindow.h  EmailPromptDialog.cpp  EmailPromptDialog.h  GradientLabel.cpp  GradientLabel.h  MLFAQSystem.cpp  MLFAQSystem.h  MainWindow.cpp  Mainwindow.h  NotificationSender.cpp  NotificationSender.h  OpenAIFallback.cpp  OpenAIFallback.h  README.md  SidebarWidget.cpp  SidebarWidget.h  WelcomeWindow.cpp  WelcomeWindow.h  chat.avif  main.cpp  resources.qrc
styles/: chatstyle.qss
